--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -81,7 +81,7 @@
       </form>
     <% end %>
     <div id=x_footer>
-      Team Roster / Paging
+      <%= link_to "Add New Member", new_member_path %>
     </div>
   </div>
 </div>
