--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -11,8 +11,7 @@
       </table>
     </div>
     <div id=x_single_col class=centered>
-      Current quarter is: <%= Time.now.current_quarter %> / 
-      Current year is: <%= Time.now.year %><p/>
+      <%= @hash[:year] %> / Q<%= @hash[:quarter] %> <p/>
 
       <table border=1 align=center>
         <thead>
