--- a/app/views/do_assignments/edit.html.erb
+++ b/app/views/do_assignments/edit.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <div id=x_container>
   <div id=x_body>
     <div id=x_header>
@@ -8,17 +5,20 @@
         <tr>
           <td align=left><b>Team Duty Officers</b></td>
           <td align=right>
-            <%= link_to("Back", do_assignments_path) %>
+            <%= link_to("Back", do_assignments_path(@quarter)) %>
           </td>
         </tr>
       </table>
     </div>
     <div id=x_single_col class=centered>
+      <%= @quarter[:year] %> / Q<%= @quarter[:quarter] %> <p/>
+
+      <%= edit_link_prev(@quarter) %> <%= edit_link_current_quarter %> <%= edit_link_next(@quarter) %><p/>
 
 
 
 <%= form_for @org, :method => :post, :url => do_assignments_path do |org| %>
-  <table align=center>
+  <table border=1 align=center>
     <tr><th>Year</th><th>Quarter</th><th>Week</th><th>DO Name</th></tr>
     <% @org.do_assignments_for(Time.now.year, Time.now.current_quarter).each do |ado| %>
       <%= org.fields_for :do_assignments, ado do |ido| %>
