--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -33,7 +33,7 @@
         </tbody>
       </table>
       <p/>
-      ( <%= link_to "Edit", edit_do_assignment_path(1) %> )
+      ( <%= link_to "Edit", edit_do_assignment_path(1, @quarter) %> )
 
     </div>
     <div id=x_footer> </div>
