--- a/app/views/avail_dos/index.html.erb
+++ b/app/views/avail_dos/index.html.erb
@@ -28,8 +28,9 @@
 
     <div id=x_single_col class=centered>
 
-      Current quarter is: <%= Time.now.current_quarter %> /
-      Current year is: <%= Time.now.year %><p/>
+      <%= @quarter[:year] %> / Q<%= @quarter[:quarter] %><p/>
+      
+      <%= link_prev(@quarter) %> <%= link_current_quarter %> <%= link_next(@quarter) %><p/>
 
       <%= form_for @member, :method => :post, :url => member_avail_dos_path(@member) do |mem| %>
         <table align=center border=1>
