--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,6 +24,7 @@
                   <td rowspan="2" class="body" bgcolor="white">
                     <A href="<%= unit_photos_path %>"><b>Photo roster</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                     <A href='<%= edit_member_path(current_member) %>' class='small'><i>Edit my photos</i></A><br>            </td>
+                  <td class="body" align="right"><a href='/reports'>Database Reports</a></td>
                 </tr>
               </table>
               </font>
