initial implementation of authorization using cancan

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -23,7 +23,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><%= link_to "Map List", '/reports/BAMRU-roster.html' %></td>
+            <td><%= link_to "Map List", '/reports/BAMRU-roster.html', :target => "_blank" %></td>
             <td>HTML</td>
             <td>HTML Roster with gMap links</td>
           </tr>
