--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -12,11 +12,13 @@
     <div id=x_header>
       <table width=100%><tr>
         <td align=left width=33%>Member Detail: <b><%= @member.full_name %></b></td>
+        <% if can? :update, @member %>
         <td align=center width=33%>
           <%= link_to("Edit", edit_member_path(@member)) %>
           <% if current_member != @member %>
             | <%= link_to("Delete", member_path(@member), :confirm => "Are you sure?", :method => :delete) %> <% end %>
         </td>
+        <% end %>
         <td align=right width=33%>
             <%= link_to('<', member_path(@member.prev_member_id)) %>
             <input size=14 id="autoselect" value="Find Member">
