--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -32,8 +32,10 @@
         <% end %>
         </tbody>
       </table>
-      <p/>
-      ( <%= link_to "Edit", edit_do_assignment_path(1, @quarter) %> )
+      <p></p>
+      <% if current_member.admin? %>
+        ( <%= link_to "Edit", edit_do_assignment_path(1, @quarter) %> )
+      <% end %>
 
     </div>
     <div id=x_footer> </div>
