--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -27,6 +27,11 @@
             <td>HTML</td>
             <td>HTML Roster with gMap links</td>
           </tr>
+          <tr>
+            <td><%= link_to "CSV Report", '/reports/BAMRU-roster.csv', :target => "_blank" %></td>
+            <td>CSV</td>
+            <td>for importing into Excel</td>
+          </tr>
         </tbody>
       </table>
 
