mobile login works

--- a/app/views/mobile/index.html.erb
+++ b/app/views/mobile/index.html.erb
@@ -1,1 +1,5 @@
-This is the mobile page!
+<div data-role="listview" data-indet="true" data-theme="c" data-dividertheme="f">
+  <li data-role="list-divider">BAMRU Mobile</li>
+  <li><%= link_to "About", '/mobile/about' %></li>
+  <li><%= link_to "Members", mobile_members_path %></li>
+</div>
