--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -1,6 +1,6 @@
-Welcome!
+<h2>BAMRU Mobile</h2>
 <p></p>
-Mobile pages are designed for smart phones.  They should work well on
-Android, iPhone, iPad, and Blackberry devices.
+Mobile pages are designed for smart phones and touch-screen devices.
+They should work well on Android, iPhone, iPad, and Blackberry.
 <p></p>
 To get started, visit <%= link_to mobile_url, mobile_path %>.
