--- a/app/views/mobile/members/index.html.erb
+++ b/app/views/mobile/members/index.html.erb
@@ -1,3 +1,6 @@
-<% @members.each do |mem| %>
-  <%= mem.full_name %><br/>
-<% end %>
+<div data-role="listview" data-inset="true" data-theme="c" data-dividertheme="f">
+  <li data-role="list-divider">BAMRU Members</li>
+  <% @members.each do |mem| %>
+    <li><%= link_to mem.full_name, mobile_member_path(mem) %></li>
+  <% end %>
+</div>
