added pdf reports

--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -1,6 +1,7 @@
 <h2>BAMRU Mobile</h2>
 <p></p>
-Mobile pages are designed for smart phones and touch-screen devices.
-They should work well on Android, iPhone, iPad, and Blackberry.
+Mobile pages are for smart phones and touch-screen devices.
 <p></p>
-To get started, visit <%= link_to mobile_url, mobile_path %>.
+They are designed to work on Android, iPhone, iPad, and Blackberry.
+<p></p>
+Visit <%= link_to mobile_url, mobile_path %>
