--- a/app/views/mobile/about.html.erb
+++ b/app/views/mobile/about.html.erb
@@ -1,1 +1,6 @@
-This is for BAMRU Mobile.
+These pages are for smart phones and touch-screen devices.
+<p></p>
+They are designed to work on Android, iPhone, iPad, and Blackberry devices.
+<p></p>
+Your are currently logged in as <%= current_member.full_name %>.
+( <%= link_to "log out", mobile_logout_path %> )
