--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -32,6 +32,16 @@
             <td>CSV</td>
             <td>for importing into Excel</td>
           </tr>
+          <tr>
+            <td><%= link_to "PDF Hello World", '/reports/HelloWorld.pdf', :target => "_blank" %></td>
+            <td>PDF</td>
+            <td>prototype/proof of concept</td>
+          </tr>
+          <tr>
+            <td><%= link_to "BAMRU Names", '/reports/BAMRU-names.pdf', :target => "_blank" %></td>
+            <td>PDF</td>
+            <td>simple list of BAMRU names - for ProDeal reporting</td>
+          </tr>
         </tbody>
       </table>
 
