--- a/app/views/unit_photos/index.html.erb
+++ b/app/views/unit_photos/index.html.erb
@@ -5,7 +5,7 @@
         <tr>
           <td align=left><b>Team Photos</b></td>
           <td align=right>
-            <%= link_to("Edit My Photos", member_path(current_member)) %>
+            <%= link_to("Edit My Photos", edit_member_path(current_member)) %>
           </td>
         </tr>
       </table>
