fixed mobile and report formatting

--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -7,11 +7,18 @@
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.css" />
   <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
+  <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
   <%# csrf_meta_tag %>
 </head>
 <body>
 
 <div data-role="page">
+  <div data-role="header">
+    <%= link_to("Home", mobile_path, "data-icon" => "home") unless current_page?(mobile_path) %>
+    <h2>BAMRU Mobile</h2>
+    <%# link_to_unless_current "BAMRU Mobile", mobile_path %>
+  </div>
+  
   <div data-role="content">
 
     <%= yield %>
