--- a/app/views/mobile/about.html.erb
+++ b/app/views/mobile/about.html.erb
@@ -3,4 +3,4 @@ These pages are for smart phones and touch-screen devices.
 They are designed to work on Android, iPhone, iPad, and Blackberry devices.
 <p></p>
 Your are currently logged in as <%= current_member.full_name %>.
-( <%= link_to "log out", mobile_logout_path %> )
+<%= link_to "log out", mobile_logout_path, "data-role" => "button", "data-position" => "inline" %>
