--- a/app/views/mobile/index.html.erb
+++ b/app/views/mobile/index.html.erb
@@ -1,5 +1,5 @@
 <div data-role="listview" data-inset="true" data-theme="c" data-dividertheme="f">
-  <li data-role="list-divider">BAMRU Mobile</li>
+  <li data-role="list-divider">Home</li>
   <li><%= link_to "About", '/mobile/about' %></li>
   <li><%= link_to "Members", mobile_members_path %></li>
 </div>
