--- a/app/views/reports/BAMRU-roster.csv.erb
+++ b/app/views/reports/BAMRU-roster.csv.erb
@@ -1,6 +1,6 @@
 <% x=1 %>
-<% fields = %w(organization roles full_name mobile_phone home_phone work_phone home_address work_address home_email personal_email work_email ham v9) %>
+<% fields = %w(organization roles full_name mobile_phone home_phone work_phone other_phone home_address work_address other_address home_email personal_email work_email ham v9) %>
 <%= fields.join(',') %> 
 <% @members.each do |mem| %>
-<%# mem.csv_row(fields) %>
+<%= raw csv_record(mem, fields) %>
 <% end %>
