--- a/app/views/members/_emergency_contact_fields.html.erb
+++ b/app/views/members/_emergency_contact_fields.html.erb
@@ -1,5 +1,5 @@
 <li class=fields style="list-style-type: none;" id=contact_<%=f.id%>>
-  <span class=sort_handle>(+)</span>
+  <span class=sort_handle><img src="/images/handle.png" class=handle></span>
   <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_field :name,   :size => 15 %>
   <%= f.text_field :number, :size => 10 %>
