--- a/app/views/mobile/members/show.html.erb
+++ b/app/views/mobile/members/show.html.erb
@@ -7,7 +7,9 @@
 <% unless @member.v9.blank? %>
   <b>V9:</b> <%= @member.v9 %><p/>
 <% end %>
-<% unless @member.photos.length > 0 %><b>Photos:</b><br/>TBD<% end %>
-<% @member.photos.each do |pic| %>
-  <%= image_tag pic.image.url(:thumb) %> 
+<% if @member.photos.length > 0 %>
+  <b>Photos:</b><br/>
+  <% @member.photos.each do |pic| %>
+    <%= image_tag pic.image.url(:thumb) %>
+  <% end %>
 <% end %>
