--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,4 +1,12 @@
-<%= simple_form_for @photo, :url => member_photos_path(@member) do |pic| %>
-  <%= pic.input :image %>
-  <%= pic.button :submit %>
-<% end %>
+<div style="text-align: center;">
+  <div style="width: 400px; margin: auto;">
+    <h2>New Photo</h2>
+    Add a new photo for <%= current_member.full_name %>.
+    (<%= link_to "back", edit_member_path(@member) %>)
+    <p></p>
+    <%= simple_form_for @photo, :url => member_photos_path(@member) do |pic| %>
+      <%= pic.input :image, :label => "" %>
+      <%= pic.button :submit %>
+    <% end %>
+  </div>
+</div>
