added info labels for "other info" and "emergency contacts"

--- a/app/views/home/edit_info.html.erb
+++ b/app/views/home/edit_info.html.erb
@@ -3,7 +3,7 @@ In BAMRU's old system, emergency contact info and misc. data
 records were mixed in with personal phone, email and address records.
 <p></p>
 In our new system, we're trying to migrate non-personal data to
-separate categories: 'Emergency Contacts' and 'Other Info'
+separate categories: <b>Emergency Contacts</b> and <b>Other Info</b>
 <p></p>
 If you see a record highlighted in light-yellow, please move that record
 to the appropriate category.
