--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,7 +1,7 @@
 <div style="text-align: center;">
   <div style="width: 400px; margin: auto;">
     <h2>New Photo</h2>
-    Add a new photo for <%= current_member.full_name %>.
+    Add a new photo for <%= @member.full_name %>.
     (<%= link_to "back", edit_member_path(@member) %>)
     <p></p>
     <%= simple_form_for @photo, :url => member_photos_path(@member) do |pic| %>
