updated javascript to auto-erase input fields with elipses...

--- a/app/views/home/edit_info.html.erb
+++ b/app/views/home/edit_info.html.erb
@@ -1,14 +1,14 @@
 <h2>About Member Records</h2>
-In BAMRU's old system, emergency contact info and misc. data
-records were mixed in with personal phone, email and address records.
+In BAMRU's old system, emergency contacts and misc. data
+were mixed in with personal phone, email and address records.
 <p></p>
-In our new system, we're trying to migrate non-personal data to
+In our new system, we're trying to migrate non-standard data to
 separate categories: <b>Emergency Contacts</b> and <b>Other Info</b>
 <p></p>
 If you see a record highlighted in light-yellow, please move that record
 to the appropriate category.
 <p></p>
 Going forward, valid record types will be:<br/>
-- for <b>phones</b>: one of (Mobile, Home, Work, Other)<br/>
-- for <b>emails</b>: one of (Personal, Work, Other)<br/>
-- for <b>addresses</b>: one of (Home, Work, Other)
+- for <b>phones</b>: Mobile, Home, Work, or Other<br/>
+- for <b>emails</b>: Personal, Work, or Other<br/>
+- for <b>addresses</b>: Home, Work, or Other
