--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -21,7 +21,7 @@
         <td align=left width=33%><b>Create New Member</b></td>
         <td align=center width=33%><%= link_to("Back", members_path) %></td>
         <td align=right width=33%>
-          <input size=14 id="autoselect" value="Find Member">
+          <input size=14 id="autoselect" value="find member...">
         </td>
       </tr></table>
     </div>
