--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -21,7 +21,7 @@
         <% end %>
         <td align=right width=33%>
             <%= link_to('<', member_path(@member.prev_member_id)) %>
-            <input size=14 id="autoselect" value="Find Member">
+            <input size=14 id="autoselect" value="find member...">
             <%= link_to('>', member_path(@member.next_member_id)) %>
         </td>
       </tr></table>
