--- a/app/views/avail_dos/index.html.erb
+++ b/app/views/avail_dos/index.html.erb
@@ -20,7 +20,7 @@
             </td>
             <td width=40% align=right>
               <%= link_to('<', member_avail_dos_path(@member.prev_member_id)) %>
-              <input size=14 id="autoselect" value="Find Member">
+              <input size=14 id="autoselect" value="find member...">
               <%= link_to('>', member_avail_dos_path(@member.next_member_id)) %>
             </td>
           <% else %>
