--- a/app/views/certs/index.html.erb
+++ b/app/views/certs/index.html.erb
@@ -22,7 +22,7 @@
           </td>
           <td width=250 align=right>
             <%= link_to('<', member_certs_path(@member.prev_member_id)) %>
-            <input size=14 id="autoselect" value="Find Member">
+            <input size=14 id="autoselect" value="find member...">
             <%= link_to('>', member_certs_path(@member.next_member_id)) %>
           </td>
         </tr>
