--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -22,7 +22,7 @@
           <td align=center width=33%><%= link_to("Back", member_path(@member)) %></td>
           <td align=right width=33%>
             <%= link_to('<', edit_member_path(@member.prev_member_id)) %>
-            <input size=14 id="autoselect" value="Find Member">
+            <input size=14 id="autoselect" value="find member...">
             <%= link_to('>', edit_member_path(@member.next_member_id)) %>
           </td>
         <% else %>
