--- a/app/views/members/_emergency_contact_fields.html.erb
+++ b/app/views/members/_emergency_contact_fields.html.erb
@@ -1,7 +1,7 @@
-<li class=fields style="list-style-type: none;" id=contact_<%=f.id%>>
+<li class=fields style="list-style-type: none;" id=contact_<%=f.object_id%>>
   <span class=sort_handle><img src="/images/handle.png" class=handle></span>
   <%= f.hidden_field :position, :size => 2 %>
-  <%= f.text_field :name,   :size => 17 %>
+  <%= f.text_field :name,   :size => 20 %>
   <%= f.text_field :number, :size => 10 %>
   <%= f.select :typ, %w(Mobile Home Work Other) %>
   <%= link_to_remove_field("remove", f) %>
