--- a/app/views/members/_other_info_fields.html.erb
+++ b/app/views/members/_other_info_fields.html.erb
@@ -1,4 +1,4 @@
-<li class=fields style="list-style-type: none;" id=other_info_<%=f.id%>>
+<li class=fields style="list-style-type: none;" id=other_info_<%=f.object_id%>>
   <span class=sort_handle><img src="/images/handle.png" class=handle></span>
   <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_field :label,   :size => 18 %>
