--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -23,7 +23,7 @@
         </thead>
         <tbody>
         <% @do_assignments.each do |a| %>
-          <% if @current_week == a.week && @current_quarter == a.quarter && Time.now.year == a.year %>
+          <% if Time.now > a.start_time && Time.now < a.end_time %>
             <tr style="background-color: lightgreen;">
           <% else %>
             <tr>
