cleaned up phone number validations

--- a/app/views/home/edit_info.html.erb
+++ b/app/views/home/edit_info.html.erb
@@ -8,7 +8,7 @@ separate categories: <b>Emergency Contacts</b> and <b>Other Info</b>
 If you see a record highlighted in light-yellow, please move that record
 to the appropriate category.
 <p></p>
-Going forward, valid record types will be:<br/>
-- for <b>phones</b>: Mobile, Home, Work, or Other<br/>
-- for <b>emails</b>: Personal, Work, or Other<br/>
-- for <b>addresses</b>: Home, Work, or Other
+<b>OR</b> - you can select a valid type for the record:<br/>
+- for <b>phones</b>, valid types are: Mobile, Home, Work, or Other<br/>
+- for <b>emails</b>, valid types are: Personal, Work, or Other<br/>
+- for <b>addresses</b>, valid types are: Home, Work, or Other
