--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,4 +1,4 @@
-<% if target.scrubbed_errors.any? %>
+<% if target.errors.any? %>
   <div id="errorExplanation">
     <h2><%= pluralize(target.scrubbed_errors.count, "error") %> prevented this record from being saved:</h2>
     <ul>
